<resources>
    <string name="app_name">Coffee Beans</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_new_account">Create New Account</string>
    <string name="type_your_name">Type Your Name</string>
    <string name="verify_your_account">Verify Your Account</string>
    <string name="enter_your_otp">Enter Your OTP</string>
    <string name="resend">Resend</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_fragment">Hello home fragment</string>
    <string name="orders_fragment">Hello orders fragment</string>
    <string name="favorites_fragment">Hello favorites fragment</string>
    <string name="others_fragment">Hello others fragment</string>
    <string name="coffee_bean">Coffee Bean</string>
    <string name="home">Home</string>
    <string name="search_coffee">Search Coffee</string>
    <string name="cart">Giỏ hàng</string>
    <string name="notifications">Notifications</string>
    <string name="add_to_cart">Thêm vào giỏ hàng</string>
    <string name="product_image">Product\'s Image</string>
    <string name="category">Category</string>
    <string name="recently">Gần đây</string>
    <string name="banner">Banner</string>
    <string name="detail">Detail</string>
    <dimen name="category_chip_radius">16dp</dimen>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Yêu thích</string>
    <string name="cappuccino">Cappuccino</string>
    <string name="variantProduct">XL, Chân châu trắng</string>
    <string name="priceProduct">40.000 VND</string>
    <string name="delete">Xoá</string>
    <string name="quantity_product_cart">1</string>
    <string name="buy_now">Mua ngay</string>
    <string name="price">Giá</string>
    <string name="description">Mô tả</string>
    <string name="size">Size</string>
    <string name="id">ID:</string>
    <string name="orderTrackingNumber">22520000</string>
    <string name="waiting">Chờ xác nhận</string>
    <string name="ma_van_don">Mã vận đơn: </string>
    <string name="default_code">XXXXXXX</string>
    <string name="total_order">Tổng tiền:</string>
    <string name="status">Trạng thái:</string>
    <string name="detail_order">Chi tiết đơn hàng</string>
    <string name="orders">Đơn hàng</string>
    <string name="back_button">Back button</string>
    <string name="shipping_address">Địa chỉ giao hàng</string>
    <string name="example_shipping_address">66E Hoàng Diệu 2, Quận Thủ Đức, Hồ Chí Minh, Việt Nam</string>
    <string name="prefix_quantity">x</string>
    <string name="customer_information">Thông tin khách hàng</string>
    <string name="custome_name">Họ và tên:</string>
    <string name="uit">UIT</string>
    <string name="customer_phone">Số điện thoại:</string>
    <string name="order_status">Trạng thái đơn hàng: </string>
    <string name="orders_list">Danh sách các món ăn đã đặt</string>
    <string name="check_reminder">Kiểm tra kĩ trước khi nhận hàng bạn nhé</string>
    <string name="total">Tổng cộng:</string>
    <string name="total_default">100.000 VND</string>
    <string name="cancel_order">Huỷ đơn hàng</string>
    <string name="user_avatar">User avatar</string>
    <string name="user_name">Binh Nguyen</string>
    <string name="silver_rank">Bạc</string>
    <string name="account">Tài khoản</string>
    <string name="Interaction">Tương tác</string>
    <string name="logout">Đăng xuất</string>
    <string name="profile">Hồ sơ</string>
    <string name="address">Địa chỉ</string>
    <string name="setting">Cài đặt</string>
    <string name="notification">Thông báo</string>
    <string name="add_picture">Thêm ảnh</string>
    <string name="general_information">Thông tin chung</string>
    <string name="update">Sửa</string>
    <string name="first_name">Tên</string>
    <string name="last_name">Họ</string>
    <string name="add_avatar">Cập nhật hình ảnh đại diện</string>
    <string name="choose_gender">Chọn giới tính</string>
    <string name="gender">Giới tính</string>
    <string name="choose_gender_description">Chọn giới tính từ danh sách</string>
    <string name="date_of_birth">Ngày sinh</string>
    <string name="phoneNumber">Số điện thoại</string>
    <string name="flag_country">Cờ quốc gia</string>
    <string name="default_countryCodePicker">+84</string>
    <string name="email">Email</string>
    <string name="security">Bảo mật</string>
    <string name="change_password">Thay đổi mật khẩu</string>
    <string name="setting_account">Cài đặt tài khoản</string>
    <string name="remove_account">Xoá tài khoản</string>
    <string name="minimun_password">Mật khẩu cần dài ít nhất 8 ký tự</string>
    <string name="old_password">Mật khẩu cũ</string>
    <string name="new_password">Nhập mật khẩu mới</string>
    <string name="confirm_password">Nhập lại mật khẩu mới</string>
    <string name="confirm">Xác nhận</string>
    <string name="placeholder">Placeholder</string>
    <string name="save_address">Địa chỉ đã lưu</string>
    <string name="recently_address">Đã đặt gần đây</string>
    <string name="add_address_button">Thêm địa chỉ mới</string>
    <string name="update_address">Sửa địa chỉ</string>
    <string name="add_address">Thêm địa chỉ mới</string>
    <string name="city">Tỉnh / Thành phố</string>
    <string name="notice">Không được để trống</string>
    <string name="select_city">Chọn Tỉnh / Thành phố</string>
    <string name="district">Huyện / Quận</string>
    <string name="select_district">Chọn Huyện / Quận</string>
    <string name="line">Địa chỉ cụ thể</string>
    <string name="select_line">Nhập địa chỉ cụ thể</string>
    <string name="set_default_address">Đặt làm địa chỉ mặc định</string>
    <string name="complete">Hoàn thành</string>
    <string name="delete_address">Xoá địa chỉ</string>
    <string name="confirm_order">Xác nhận đơn hàng</string>
    <string name="choosed_products">Sản phẩm đã chọn</string>
    <string name="apply_discount">Xem các ưu đãi áp dụng</string>
    <string name="choose_address">Chọn địa chỉ giao hàng</string>
    <string name="navigate_to_discount">Di chuyển sang màn áp dụng voucher</string>
    <string name="discount_icon">Icon mã giảm giá</string>
    <string name="default_price">Tổng tiền</string>
    <string name="totalProducts">Tạm tính</string>
    <string name="fee_shipping">Giảm giá</string>
    <string name="payment_method">Phương thức thanh toán</string>
    <string name="payment_icon">Icon phương thức thanh toán</string>
    <string name="discount">Ưu đãi</string>
    <string name="apply">Áp dụng</string>
    <string name="review">Đánh giá</string>
    <string name="delivery_successfully">Giao hàng thành công</string>
    <string name="rating_label">Vui lòng đánh giá để chúng tôi cải thiện dịch vụ</string>
    <string name="need_improve">Chúng tôi cần gì?</string>
    <string name="send_review">Gửi đánh giá</string>
    <string name="new_notification">Thông báo mới</string>
    <string name="default_content_notification">Nội dung thông báo dài hơn một dòng sẽ bị cắt...</string>
    <string name="all_notifications">Tất cả thông báo</string>
    <string name="menu">Menu</string>
    <string name="default_cost_order">Tạm tính</string>
    <string name="best_seller">Best Seller</string>
    <string name="ch_n_chi_nh_nh_giao_h_ng">Chọn chi nhánh giao hàng</string>
    <string name="branchList">Chọn chi nhánh đặt hàng</string>
</resources>