<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_marginVertical="5dp"
    android:background="@drawable/bg_product_cart"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp">

            <ImageView
                android:id="@+id/productImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/product_image"
                android:scaleType="centerCrop"
                android:src="@drawable/demo_image" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingHorizontal="10dp">

        <TextView
            android:id="@+id/productNameTextView"
            style="@style/text_base_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:text="@string/cappuccino" />

        <TextView
            android:id="@+id/variantProductTextView"
            style="@style/text_xs_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:text="@string/variantProduct"
            android:textColor="@color/secondary_400"
            />

        <TextView
            android:id="@+id/priceTextView"
            style="@style/text_base_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/priceProduct" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            style="@style/text_base_semibold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/prefix_quantity"
            />
        <TextView
            android:id="@+id/quantityTextView"
            style="@style/text_base_semibold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/quantity_product_cart" />
    </LinearLayout>
</LinearLayout>